# zed-classic-asp

./: .gitignore  Cargo.toml  README.md  extension.toml
.zed/: settings.json
languages/asp/: brackets.scm  config.toml  highlights.scm  injections.scm
languages/vbscript/: brackets.scm  config.toml  highlights.scm  outlines.scm
server/: Cargo.toml
server/src/: builtins.rs  main.rs  parse.rs  state.rs
src/: lib.rs
test/: lsp_smoke.py
test/fixtures/: sample.asp  sample.vbs
test/lsp-workspace/: default.asp
test/lsp-workspace/includes/: header.asp
test/lsp-workspace/lib/: db.asp
