[package]
name = "asp-ls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal language server for Classic ASP (VBScript)"

[workspace]

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
anyhow = "1"
